--- a/UI_App/qt_ui_files/science_tab_layout2.ui
+++ b/UI_App/qt_ui_files/science_tab_layout2.ui
@@ -227,24 +227,39 @@ QPushButton:checked{
                 <layout class="QGridLayout" name="gridLayout_13">
                  <item row="0" column="0">
                   <layout class="QGridLayout" name="gridLayout_18">
-                   <item row="2" column="0" colspan="2">
+                   <item row="1" column="1">
+                    <widget class="QLCDNumber" name="stepperMotor2Pos_value"/>
+                   </item>
+                   <item row="3" column="0" colspan="2">
                     <widget class="QDoubleSpinBox" name="stepperMotor2Pos_doubleSpinBox">
                      <property name="sizePolicy">
-                      <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+                      <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
                        <horstretch>0</horstretch>
                        <verstretch>0</verstretch>
                       </sizepolicy>
                      </property>
                     </widget>
                    </item>
-                   <item row="3" column="0" colspan="2">
-                    <widget class="Line" name="line_4">
-                     <property name="orientation">
-                      <enum>Qt::Horizontal</enum>
+                   <item row="0" column="0" colspan="2">
+                    <widget class="QLabel" name="label_2">
+                     <property name="minimumSize">
+                      <size>
+                       <width>0</width>
+                       <height>50</height>
+                      </size>
+                     </property>
+                     <property name="maximumSize">
+                      <size>
+                       <width>16777215</width>
+                       <height>50</height>
+                      </size>
+                     </property>
+                     <property name="text">
+                      <string>Stepper Motor 2</string>
                      </property>
                     </widget>
                    </item>
-                   <item row="0" column="0">
+                   <item row="1" column="0">
                     <widget class="QLabel" name="stepperMotor2Pos_label">
                      <property name="sizePolicy">
                       <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
@@ -286,9 +301,6 @@ QPushButton:checked{
                       <widget class="QDoubleSpinBox" name="stepperMotor2Speed_doubleSpinBox"/>
                      </item>
                     </layout>
-                   </item>
-                   <item row="0" column="1">
-                    <widget class="QLCDNumber" name="stepperMotor2Pos_value"/>
                    </item>
                   </layout>
                  </item>
@@ -359,10 +371,10 @@ QPushButton:checked{
                </item>
                <item row="0" column="0">
                 <layout class="QGridLayout" name="gridLayout_14">
-                 <item row="0" column="0">
+                 <item row="1" column="0">
                   <layout class="QGridLayout" name="gridLayout_16">
-                   <item row="2" column="0" colspan="2">
-                    <widget class="QDoubleSpinBox" name="stepperMotor1Pos_doubleSpinBox">
+                   <item row="1" column="1">
+                    <widget class="QLCDNumber" name="stepperMotor1Pos_value">
                      <property name="sizePolicy">
                       <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
                        <horstretch>0</horstretch>
@@ -372,28 +384,12 @@ QPushButton:checked{
                     </widget>
                    </item>
                    <item row="3" column="0" colspan="2">
-                    <widget class="Line" name="line_3">
-                     <property name="orientation">
-                      <enum>Qt::Horizontal</enum>
-                     </property>
-                    </widget>
-                   </item>
-                   <item row="0" column="0">
-                    <widget class="QLabel" name="stepperMotor1Pos_label">
+                    <widget class="QDoubleSpinBox" name="stepperMotor1Pos_doubleSpinBox">
                      <property name="sizePolicy">
-                      <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+                      <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
                        <horstretch>0</horstretch>
                        <verstretch>0</verstretch>
                       </sizepolicy>
-                     </property>
-                     <property name="maximumSize">
-                      <size>
-                       <width>16777215</width>
-                       <height>35</height>
-                      </size>
-                     </property>
-                     <property name="text">
-                      <string>Stepper Motor 1 (pos)</string>
                      </property>
                     </widget>
                    </item>
@@ -421,10 +417,39 @@ QPushButton:checked{
                      </item>
                     </layout>
                    </item>
-                   <item row="0" column="1">
-                    <widget class="QLCDNumber" name="stepperMotor1Pos_value"/>
+                   <item row="1" column="0">
+                    <widget class="QLabel" name="stepperMotor1Pos_label">
+                     <property name="sizePolicy">
+                      <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+                       <horstretch>0</horstretch>
+                       <verstretch>0</verstretch>
+                      </sizepolicy>
+                     </property>
+                     <property name="maximumSize">
+                      <size>
+                       <width>16777215</width>
+                       <height>35</height>
+                      </size>
+                     </property>
+                     <property name="text">
+                      <string>Stepper Motor 1 (pos)</string>
+                     </property>
+                    </widget>
                    </item>
                   </layout>
+                 </item>
+                 <item row="0" column="0">
+                  <widget class="QLabel" name="label">
+                   <property name="maximumSize">
+                    <size>
+                     <width>16777215</width>
+                     <height>50</height>
+                    </size>
+                   </property>
+                   <property name="text">
+                    <string>Stepper Motor 1</string>
+                   </property>
+                  </widget>
                  </item>
                 </layout>
                </item>
