--- a/UI_App/qt_ui_files/drive_layout.ui
+++ b/UI_App/qt_ui_files/drive_layout.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>DriveTab</class>
+ <class>Drive</class>
  <widget class="QWidget" name="Drive">
   <property name="geometry">
    <rect>
@@ -18,16 +18,19 @@
     <rect>
      <x>120</x>
      <y>40</y>
-     <width>64</width>
-     <height>23</height>
+     <width>71</width>
+     <height>31</height>
     </rect>
+   </property>
+   <property name="segmentStyle">
+    <enum>QLCDNumber::Flat</enum>
    </property>
   </widget>
   <widget class="QLabel" name="right_speed_label">
    <property name="geometry">
     <rect>
      <x>140</x>
-     <y>60</y>
+     <y>70</y>
      <width>47</width>
      <height>21</height>
     </rect>
@@ -41,16 +44,19 @@
     <rect>
      <x>20</x>
      <y>100</y>
-     <width>64</width>
-     <height>23</height>
+     <width>71</width>
+     <height>31</height>
     </rect>
+   </property>
+   <property name="segmentStyle">
+    <enum>QLCDNumber::Flat</enum>
    </property>
   </widget>
   <widget class="QLabel" name="left_speed_label">
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>60</y>
+     <y>70</y>
      <width>47</width>
      <height>21</height>
     </rect>
@@ -64,17 +70,39 @@
     <rect>
      <x>20</x>
      <y>40</y>
-     <width>64</width>
-     <height>23</height>
+     <width>71</width>
+     <height>31</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <weight>50</weight>
+     <bold>false</bold>
+     <kerning>true</kerning>
+    </font>
+   </property>
+   <property name="smallDecimalPoint">
+    <bool>false</bool>
+   </property>
+   <property name="digitCount">
+    <number>5</number>
+   </property>
+   <property name="segmentStyle">
+    <enum>QLCDNumber::Flat</enum>
+   </property>
+   <property name="value" stdset="0">
+    <double>0.000000000000000</double>
+   </property>
+   <property name="intValue" stdset="0">
+    <number>0</number>
    </property>
   </widget>
   <widget class="QLabel" name="rear_right_speed_label">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>120</y>
-     <width>61</width>
+     <x>120</x>
+     <y>130</y>
+     <width>91</width>
      <height>20</height>
     </rect>
    </property>
@@ -87,17 +115,20 @@
     <rect>
      <x>120</x>
      <y>100</y>
-     <width>64</width>
-     <height>23</height>
+     <width>71</width>
+     <height>31</height>
     </rect>
+   </property>
+   <property name="segmentStyle">
+    <enum>QLCDNumber::Flat</enum>
    </property>
   </widget>
   <widget class="QLabel" name="rear_left_speed_label">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>110</y>
-     <width>51</width>
+     <x>20</x>
+     <y>120</y>
+     <width>81</width>
      <height>41</height>
     </rect>
    </property>
@@ -146,9 +177,12 @@
     <rect>
      <x>20</x>
      <y>210</y>
-     <width>64</width>
-     <height>23</height>
+     <width>71</width>
+     <height>31</height>
     </rect>
+   </property>
+   <property name="segmentStyle">
+    <enum>QLCDNumber::Flat</enum>
    </property>
   </widget>
   <widget class="QLCDNumber" name="twist_angular_velocity">
@@ -156,18 +190,21 @@
     <rect>
      <x>100</x>
      <y>210</y>
-     <width>64</width>
-     <height>23</height>
+     <width>81</width>
+     <height>31</height>
     </rect>
+   </property>
+   <property name="segmentStyle">
+    <enum>QLCDNumber::Flat</enum>
    </property>
   </widget>
   <widget class="QLabel" name="twist_linear_velocity_label">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>240</y>
-     <width>47</width>
-     <height>13</height>
+     <x>30</x>
+     <y>250</y>
+     <width>51</width>
+     <height>16</height>
     </rect>
    </property>
    <property name="text">
@@ -178,9 +215,9 @@
    <property name="geometry">
     <rect>
      <x>110</x>
-     <y>240</y>
-     <width>47</width>
-     <height>13</height>
+     <y>250</y>
+     <width>61</width>
+     <height>21</height>
     </rect>
    </property>
    <property name="text">
@@ -225,7 +262,7 @@
     <rect>
      <x>20</x>
      <y>300</y>
-     <width>211</width>
+     <width>231</width>
      <height>16</height>
     </rect>
    </property>
@@ -279,9 +316,12 @@
     <rect>
      <x>20</x>
      <y>330</y>
-     <width>64</width>
-     <height>23</height>
+     <width>71</width>
+     <height>31</height>
     </rect>
+   </property>
+   <property name="segmentStyle">
+    <enum>QLCDNumber::Flat</enum>
    </property>
   </widget>
   <widget class="QLCDNumber" name="robot_location_y">
@@ -289,18 +329,21 @@
     <rect>
      <x>100</x>
      <y>330</y>
-     <width>64</width>
-     <height>23</height>
+     <width>71</width>
+     <height>31</height>
     </rect>
+   </property>
+   <property name="segmentStyle">
+    <enum>QLCDNumber::Flat</enum>
    </property>
   </widget>
   <widget class="QLabel" name="robot_location_x_label">
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>360</y>
+     <y>363</y>
      <width>47</width>
-     <height>13</height>
+     <height>20</height>
     </rect>
    </property>
    <property name="text">
@@ -313,7 +356,7 @@
      <x>130</x>
      <y>360</y>
      <width>47</width>
-     <height>13</height>
+     <height>21</height>
     </rect>
    </property>
    <property name="text">
@@ -325,9 +368,12 @@
     <rect>
      <x>180</x>
      <y>330</y>
-     <width>64</width>
-     <height>23</height>
+     <width>71</width>
+     <height>31</height>
     </rect>
+   </property>
+   <property name="segmentStyle">
+    <enum>QLCDNumber::Flat</enum>
    </property>
   </widget>
   <widget class="QLabel" name="robot_location_yaw_label">
@@ -335,8 +381,8 @@
     <rect>
      <x>200</x>
      <y>360</y>
-     <width>47</width>
-     <height>13</height>
+     <width>51</width>
+     <height>21</height>
     </rect>
    </property>
    <property name="text">
