--- a/UI_App/qt_ui_files/science_tab_layout.ui
+++ b/UI_App/qt_ui_files/science_tab_layout.ui
@@ -41,7 +41,7 @@
           <property name="geometry">
            <rect>
             <x>0</x>
-            <y>-56</y>
+            <y>0</y>
             <width>418</width>
             <height>761</height>
            </rect>
@@ -637,6 +637,9 @@ QPushButton:checked{
                  <property name="checkable">
                   <bool>true</bool>
                  </property>
+                 <property name="checked">
+                  <bool>false</bool>
+                 </property>
                 </widget>
                </item>
               </layout>
@@ -768,7 +771,7 @@ QPushButton:checked{
                 </spacer>
                </item>
                <item>
-                <widget class="QPushButton" name="peltierState_toggle_2">
+                <widget class="QPushButton" name="ccdSensorSnap_toggle">
                  <property name="sizePolicy">
                   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                    <horstretch>0</horstretch>
