--- a/UI_App/qt_ui_files/arm_layout.ui
+++ b/UI_App/qt_ui_files/arm_layout.ui
@@ -6,12 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>308</width>
-    <height>475</height>
+    <width>368</width>
+    <height>619</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
+  </property>
+  <property name="autoFillBackground">
+   <bool>true</bool>
   </property>
   <widget class="QLabel" name="arm_joints">
    <property name="geometry">
@@ -31,17 +34,17 @@
     <string>Arm Joints</string>
    </property>
   </widget>
-  <widget class="QLabel" name="joint_one">
+  <widget class="QLabel" name="joint_Shoulder">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>120</x>
      <y>60</y>
-     <width>21</width>
+     <width>71</width>
      <height>17</height>
     </rect>
    </property>
    <property name="text">
-    <string>#1</string>
+    <string>#Shoulder</string>
    </property>
   </widget>
   <widget class="QLCDNumber" name="joint_one_value">
@@ -64,17 +67,17 @@
     </rect>
    </property>
   </widget>
-  <widget class="QLabel" name="joint_two">
+  <widget class="QLabel" name="joint_Elbow">
    <property name="geometry">
     <rect>
-     <x>120</x>
+     <x>230</x>
      <y>60</y>
-     <width>21</width>
-     <height>17</height>
+     <width>71</width>
+     <height>16</height>
     </rect>
    </property>
    <property name="text">
-    <string>#1</string>
+    <string>#Elbow</string>
    </property>
   </widget>
   <widget class="QLCDNumber" name="joint_three_value">
@@ -87,17 +90,17 @@
     </rect>
    </property>
   </widget>
-  <widget class="QLabel" name="joint_three">
+  <widget class="QLabel" name="joint_Wrist">
    <property name="geometry">
     <rect>
-     <x>230</x>
-     <y>60</y>
-     <width>21</width>
+     <x>10</x>
+     <y>130</y>
+     <width>71</width>
      <height>17</height>
     </rect>
    </property>
    <property name="text">
-    <string>#1</string>
+    <string>#Wrist</string>
    </property>
   </widget>
   <widget class="QLCDNumber" name="joint_four_value">
@@ -120,60 +123,30 @@
     </rect>
    </property>
   </widget>
-  <widget class="QLabel" name="joint_five">
+  <widget class="QLabel" name="joint_End">
    <property name="geometry">
     <rect>
      <x>120</x>
      <y>130</y>
-     <width>21</width>
+     <width>51</width>
      <height>17</height>
     </rect>
    </property>
    <property name="text">
-    <string>#1</string>
+    <string>#End </string>
    </property>
   </widget>
-  <widget class="QLabel" name="joint_four">
+  <widget class="QLabel" name="joint_Waist">
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>130</y>
-     <width>21</width>
+     <y>60</y>
+     <width>61</width>
      <height>17</height>
     </rect>
    </property>
    <property name="text">
-    <string>#1</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="error_label">
-   <property name="enabled">
-    <bool>true</bool>
-   </property>
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>210</y>
-     <width>91</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>20</pointsize>
-     <weight>75</weight>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="autoFillBackground">
-    <bool>false</bool>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">QLabel {background:red}
-</string>
-   </property>
-   <property name="text">
-    <string>Error</string>
+    <string>#Waist</string>
    </property>
   </widget>
   <widget class="QLabel" name="hand_position_label">
@@ -194,7 +167,7 @@
     <string>Hand Position</string>
    </property>
   </widget>
-  <widget class="QLabel" name="hand_position_label_2">
+  <widget class="QLabel" name="orientation_label">
    <property name="geometry">
     <rect>
      <x>10</x>
@@ -378,6 +351,34 @@
    </property>
    <property name="text">
     <string>Z:</string>
+   </property>
+  </widget>
+  <widget class="QTextBrowser" name="error_label">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>510</y>
+     <width>231</width>
+     <height>91</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="error_message_label">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>460</y>
+     <width>151</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>17</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Error Message</string>
    </property>
   </widget>
  </widget>
